--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "hexo": {
     "version": "3.9.0"
   },
+  "scripts": {
+    "build": "hexo g",
+    "deploy": "netlify deploy"
+  },
   "dependencies": {
     "hexo": "^3.9.0",
     "hexo-deployer-git": "^1.0.0",
