--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "hexo g",
-    "deploy": "netlify deploy"
+    "deploy": "hexo g && netlify deploy",
+    "start": "hexo server -p 8080"
   },
   "dependencies": {
     "hexo": "^3.9.0",
