--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: xx
-description: xx
+title: Simple
+subtitle: The greatest truths are the simplest
+description: I like programming, but love life more
 keywords: 
-  - xxx
+  - Programming
+  - Life
 author: double
 email: 2637309949@qq.com
 loc: Guanzhou
