--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "hexo g",
     "deploy": "hexo g && netlify deploy",
-    "start": "hexo server -p 8080"
+    "start": "hexo server -p 8080",
+    "clean": "hexo clean"
   },
   "dependencies": {
     "hexo": "^3.9.0",
