--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ keywords:
   - Programming
   - Life
 author: double
+avatar: images/about/me.jpg
 email: 2637309949@qq.com
 loc: Guanzhou
 focus: Nodejs,Golang
