feat: 添加评论功能

--- a/themes/material-flow/_config.yml
+++ b/themes/material-flow/_config.yml
@@ -50,3 +50,9 @@ less:
 social:
 - slug: github
   url: https://github.com/2637309949
+
+# comments module
+comments:
+  enabled: true
+  provider: livere
+  uid: MTAyMC80NjE2OC8yMjY3OQ==
