--- a/.drone.yml
+++ b/.drone.yml
@@ -15,11 +15,11 @@ steps:
 - name: master-docker  
   image: plugins/docker
   settings:
-    registry: http://172.20.10.3:8082
+    registry: 172.20.10.3:8082
     username: simple
     password: admin123
     dockerfile: ./Dockerfile
-    repo: http://172.20.10.3:8082/${DRONE_REPO_NAME}
+    repo: 172.20.10.3:8082/${DRONE_REPO_NAME}
     tags: ${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
   when:
     branch:
