--- a/.drone.yml
+++ b/.drone.yml
@@ -21,6 +21,7 @@ steps:
     dockerfile: ./Dockerfile
     repo: 172.20.10.3:8082/${DRONE_REPO_NAME}
     tags: ${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
+    insecure: true
   when:
     branch:
       - master
