--- a/.drone.yml
+++ b/.drone.yml
@@ -5,8 +5,10 @@ steps:
 - name: master-build  
   image: node:carbon-alpine
   commands:
+    - npm config set registry http://registry.npm.taobao.org/
     - npm install
     - npm run build
+    - npm config set registry https://registry.npmjs.org/
   when:
     branch:
       - master
