--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
   image: plugins/docker
   settings:
     registry: 172.20.10.3:8082
-    mirror: https://registry.docker-cn.com
+    mirror: http://hub-mirror.c.163.com
     username: simple
     password: admin123
     dockerfile: ./Dockerfile
