--- a/.drone.yml
+++ b/.drone.yml
@@ -32,13 +32,14 @@ steps:
 
 - name: master-deploy  
   image: appleboy/drone-ssh
-  host:
-    - 172.20.10.3
-  username: double
-  password:
-    from_secret: ssh_secret
-  port: 22
-  command_timeout: 2m
-  script:
-    - docker pull 172.20.10.3:8082/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
-    - docker run --rm -d -p 80:80/tcp 172.20.10.3:8082/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
+  settings:
+    host:
+      - 172.20.10.3
+    username: double
+    password:
+      from_secret: ssh_secret
+    port: 22
+    command_timeout: 2m
+    script:
+      - docker pull 172.20.10.3:8082/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
+      - docker run --rm -d -p 80:80/tcp 172.20.10.3:8082/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
