feat: 添加图片预览插件

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,23 @@ index_generator:
   per_page: 10
   order_by: -date
 
+# Generate gallery for Hexo
+lightgallery:
+  js: https://cdn.jsdelivr.net/lightgallery.js/1.0.1/js/lightgallery.min.js
+  css: https://cdn.jsdelivr.net/lightgallery.js/1.0.1/css/lightgallery.min.css
+  # if you don't specify the css or js source, the default cdn will be used.
+  # css: # css source url
+  # js: #js source url
+  # sorry that I can not find any cdn hosting following plugins,
+  # please self-host the plugin js and add url here
+  # plugins:
+      # lg-thumbnail:
+      # lg-zoom:
+      # lg-autoplay:
+      # lg-fullscreen:
+      # lg-pager:
+
+
 # Category & Tag
 default_category: uncategorized
 category_map:
