--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-generator-json-content": "^4.1.6",
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-light-gallery": "^1.0.1",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-less": "^1.0.0",
     "hexo-renderer-marked": "^1.0.1",
