--- a/.drone.yml
+++ b/.drone.yml
@@ -30,16 +30,15 @@ steps:
       - master
     event: [push]
 
-- name: master-deploy  
-  image: appleboy/drone-ssh
+- name: master-deploy
+  image: drone-portainer
   settings:
-    host:
-      - 172.20.10.3
-    username: double
+    url: http://127.0.0.1:9000
+    stack: appinspiration
+    username:
+      from_secret: portainer_username
     password:
-      from_secret: ssh_secret
-    port: 22
-    command_timeout: 2m
-    script:
-      - docker pull 172.20.10.3:8082/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
-      - docker run --rm -d -p 80:80/tcp 172.20.10.3:8082/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
+      from_secret: portainer_password
+    environment:
+      DRONE_COMMIT_BRANCH: ${DRONE_COMMIT_BRANCH}
+      DRONE_BUILD_NUMBER: ${DRONE_BUILD_NUMBER}
