--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   web:
     image: 172.20.10.3:8082/inspiration:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
+    ports:
+      - 80
   lb:
     image: dockercloud/haproxy
     ports:
